# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "datashare_resultset"
version = "1.0.0"
edition = "2021"
description = "DataShare ResultSet and SharedBlock in Rust for OpenHarmony"
license = "Apache-2.0"

[lib]
name = "datashare_resultset"
crate-type = ["lib"]

[dependencies]
datashare_common = { path = "../datashare_common_rust" }

[dev-dependencies]