# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/distributeddatamgr/data_share/datashare.gni")

config("ability_config") {
  visibility = [ ":*" ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
}

ohos_shared_library("datashare_common") {
  include_dirs = [
    "${datashare_common_napi_path}/include",
    "${datashare_common_native_path}/include",
    "${datashare_base_path}/interfaces/inner_api/common/include",
    "${datashare_base_path}/interfaces/inner_api/consumer/include",
    "${datashare_base_path}/interfaces/inner_api/provider/include",
  ]

  sources = [
    "${datashare_common_napi_path}/src/datashare_error.cpp",
    "${datashare_common_napi_path}/src/datashare_js_utils.cpp",
    "${datashare_common_napi_path}/src/datashare_predicates_proxy.cpp",
    "${datashare_common_napi_path}/src/datashare_result_set_proxy.cpp",
    "${datashare_common_napi_path}/src/napi_datashare_values_bucket.cpp",
    "${datashare_common_native_path}/src/datashare_abs_result_set.cpp",
    "${datashare_common_native_path}/src/datashare_block_writer_impl.cpp",
    "${datashare_common_native_path}/src/datashare_result_set.cpp",
    "${datashare_common_native_path}/src/ishared_result_set.cpp",
    "${datashare_common_native_path}/src/ishared_result_set_proxy.cpp",
    "${datashare_common_native_path}/src/ishared_result_set_stub.cpp",
    "${datashare_common_native_path}/src/itypes_utils.cpp",
    "${datashare_common_native_path}/src/shared_block.cpp",
  ]

  public_deps = []

  configs = [ ":ability_config" ]
  version_script = "libdatashare_common.map"

  external_deps = [
    "ability_base:zuri",
    "c_utils:utils",
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "hitrace_native:libhitracechain",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "napi:ace_napi",
    "relational_store:native_appdatafwk",
  ]

  subsystem_name = "distributeddatamgr"
  part_name = "data_share"
}
