# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

##################################################################
group("unittest") {
  testonly = true
  deps = []

  deps += [
    "consumer:unittest",
    "common:unittest",
    "provider:unittest",
    "../../native/resource/datashare_ext_bundle:datashare_ext",
    "../../native/resource/datashareproxy_bundle/proxydatas_with_permission:proxydatas_with_permission",
    "../../native/resource/errorcode_ext_bundle:errorcode_ext",
    "../../native/resource/ohos_test_new:copy_ohos_test_new",
  ]
}
##################################################################