# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/distributeddatamgr/data_share/datashare.gni")

config("public_ffi_config") {
  include_dirs = [ "include" ]
  cflags_cc = [ "-std=c++17" ]
}

ohos_shared_library("cj_data_share_predicates_ffi") {
  branch_protector_ret = "pac_ret"

  include_dirs = []

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    boundary_sanitize = true
    integer_overflow = true
    ubsan = true
  }

  public_configs = [ ":public_ffi_config" ]

  sources = [
    "src/data_share_predicates_ffi.cpp",
    "src/data_share_predicates_impl.cpp",
    "src/data_share_predicates_utils.cpp",
  ]

  deps = [ "${datashare_innerapi_path}/common:datashare_common" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "napi:ace_napi",
    "napi:cj_bind_ffi",
    "napi:cj_bind_native",
    "relational_store:native_rdb",
  ]

  innerapi_tags = [ "platformsdk" ]

  subsystem_name = "distributeddatamgr"
  part_name = "data_share"
}
