# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")
import("//foundation/distributeddatamgr/data_share/datashare.gni")

ohos_shared_library("datashare") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [
    "src/ani_datashare_helper.cpp",
    "src/ani_datashare_inner_observer.cpp",
    "src/ani_datashare_observer.cpp",
  ]

  include_dirs = [
    "${datashare_base_path}/interfaces/inner_api/common/include",
    "include/",
  ]

  deps = [
    "${datashare_innerapi_path}:datashare_consumer",
    "${datashare_innerapi_path}/common:datashare_common",
  ]

  external_deps = [
    "ability_runtime:ani_base_context",
    "ability_runtime:ani_common",
    "ability_runtime:app_context",
    "c_utils:utils",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "hitrace:libhitracechain",
    "ipc:ipc_single",
    "runtime_core:ani",
  ]

  subsystem_name = "distributeddatamgr"
  part_name = "data_share"
  output_extension = "so"
}

generate_static_abc("datashare_abc") {
  base_url = "./ets"
  files = [ "./ets/@ohos.data.dataShare.ets" ]
  dst_file = "$target_out_dir/datashare.abc"
  out_puts = [ "$target_out_dir/datashare.abc" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/datashare.abc"
}

ohos_prebuilt_etc("datashare_abc_etc") {
  source = "$target_out_dir/datashare.abc"
  module_install_dir = "framework"
  subsystem_name = "distributeddatamgr"
  part_name = "data_share"
  deps = [ ":datashare_abc" ]
}

group("data_share") {
  deps = [
    ":datashare",
    ":datashare_abc_etc",
  ]
}

ohos_shared_library("datasharepredicates_ani") {
  sanitize = {
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [ "./src/data_share_predicates.cpp" ]
  include_dirs = [
    "include",
    "${datashare_common_native_path}/include",
  ]
  deps = [ "${datashare_innerapi_path}/common:datashare_common" ]
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "runtime_core:ani",
  ]
  subsystem_name = "distributeddatamgr"
  part_name = "data_share"
  output_extension = "so"
}

generate_static_abc("data_share_predicates_abc") {
  base_url = "./ets"
  files = [ "./ets/@ohos.data.dataSharePredicates.ets" ]
  dst_file = "$target_out_dir/data_share_predicates.abc"
  out_puts = [ "$target_out_dir/data_share_predicates.abc" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/data_share_predicates.abc"
}

ohos_prebuilt_etc("data_share_predicates_abc_etc") {
  source = "$target_out_dir/data_share_predicates.abc"
  module_install_dir = "framework"
  subsystem_name = "distributeddatamgr"
  part_name = "data_share"
  deps = [ ":data_share_predicates_abc" ]
}

group("data_share_predicates") {
  deps = [
    ":data_share_predicates_abc_etc",
    ":datasharepredicates_ani",
  ]
}
