# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/distributeddatamgr/data_share/datashare.gni")

ohos_shared_library("datashare_jscommon") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  include_dirs = [
    "${datashare_common_native_path}/include",
    "${datashare_common_napi_path}/include",
    "${kvstore_common_path}",
  ]

  sources = [
    "${datashare_common_napi_path}/src/datashare_js_utils.cpp",
    "${datashare_common_napi_path}/src/datashare_predicates_proxy.cpp",
    "${datashare_common_napi_path}/src/napi_datashare_values_bucket.cpp",
  ]

  deps = [ "${datashare_innerapi_path}/common:datashare_common" ]

  version_script = "libdatashare_jscommon.map"

  external_deps = [
    "ability_base:zuri",
    "c_utils:utils",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "hitrace:libhitracechain",
    "ipc:ipc_napi",
    "ipc:ipc_single",
    "napi:ace_napi",
  ]

  subsystem_name = "distributeddatamgr"
  part_name = "data_share"
}

ohos_shared_library("datashare") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  include_dirs = [
    "${datashare_napi_path}/dataShare/include",
    "${datashare_common_napi_path}/include",
    "${datashare_common_native_path}/include",
    "${datashare_napi_path}/observer/include",
  ]

  sources = [
    "${datashare_common_napi_path}/src/datashare_error_impl.cpp",
    "${datashare_common_napi_path}/src/datashare_result_set_proxy.cpp",
    "${datashare_napi_path}/dataShare/src/async_call.cpp",
    "${datashare_napi_path}/dataShare/src/napi_datashare_const_properties.cpp",
    "${datashare_napi_path}/dataShare/src/napi_datashare_helper.cpp",
    "${datashare_napi_path}/dataShare/src/napi_datashare_inner_observer.cpp",
    "${datashare_napi_path}/dataShare/src/napi_datashare_observer.cpp",
    "${datashare_napi_path}/dataShare/src/native_datashare_module.cpp",
    "${datashare_napi_path}/observer/src/napi_observer.cpp",
    "${datashare_napi_path}/observer/src/napi_subscriber_manager.cpp",
  ]

  deps = [
    ":datashare_jscommon",
    "${datashare_innerapi_path}:datashare_consumer",
    "${datashare_innerapi_path}/common:datashare_common",
    "//third_party/libuv:uv",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:abilitykit_native",
    "ability_runtime:dataobs_manager",
    "ability_runtime:napi_base_context",
    "ability_runtime:napi_common",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "hitrace:libhitracechain",
    "ipc:ipc_single",
    "napi:ace_napi",
  ]

  relative_install_dir = "module/data"

  subsystem_name = "distributeddatamgr"
  part_name = "data_share"
}

ohos_shared_library("datasharepredicates") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  include_dirs = [
    "${datashare_common_napi_path}/include",
    "${datashare_common_native_path}/include",
  ]

  sources = [ "${datashare_napi_path}/dataShare/src/native_datashare_predicates_module.cpp" ]

  deps = [
    ":datashare_jscommon",
    "${datashare_innerapi_path}:datashare_consumer",
    "${datashare_innerapi_path}/common:datashare_common",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "napi:ace_napi",
  ]

  relative_install_dir = "module/data"

  subsystem_name = "distributeddatamgr"
  part_name = "data_share"
}
