# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")

rust_cxx("ffi_account_cxx_gen") {
  sources = [ "src/wrapper.rs" ]
}

ohos_static_library("ffi_account_cxx") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  include_dirs = [
    "src",
    "${target_gen_dir}/src",
    "//foundation/distributeddatamgr/datamgr_service/services/distributeddataservice/framework/include",
  ]

  sources = [ "src/ffi_bridge.cpp" ]
  sources += get_target_outputs(":ffi_account_cxx_gen")

  deps = [
    ":ffi_account_cxx_gen",
    "//foundation/distributeddatamgr/datamgr_service/services/distributeddataservice/framework:distributeddatasvcfwk",
  ]

  external_deps = [
    "access_token:libtokenid_sdk",
    "c_utils:utils",
    "ipc:ipc_core",
    "kv_store:datamgr_common",
    "rust_cxx:cxx_cppdeps",
  ]

  subsystem_name = "distributeddatamgr"
  part_name = "datamgr_service"
}

ohos_rust_static_library("ffi_account") {
  crate_name = "ffi_account"
  sources = [ "src/lib.rs" ]

  deps = [ ":ffi_account_cxx" ]

  external_deps = [ "rust_cxx:lib" ]

  subsystem_name = "distributeddatamgr"
  part_name = "datamgr_service"
}

if (use_clang_coverage) {
  group("ffi_account_test") {
  }
} else {
  ohos_rust_unittest("ffi_account_test") {
    module_out_path = "datamgr_service/ffi/ffi_account"
    sources = [ "src/lib.rs" ]

    deps = [ ":ffi_account_cxx" ]

    external_deps = [ "rust_cxx:lib" ]

    subsystem_name = "distributeddatamgr"
    part_name = "datamgr_service"
  }
}
