# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")

rust_cxx("ffi_hitrace_cxx_gen") {
  sources = [ "src/wrapper.rs" ]
}

ohos_static_library("ffi_hitrace_cxx") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  include_dirs = [
    "src",
    "${target_gen_dir}/src",
  ]

  sources = [ "src/ffi_bridge.cpp" ]
  sources += get_target_outputs(":ffi_hitrace_cxx_gen")

  deps = [ ":ffi_hitrace_cxx_gen" ]

  external_deps = [
    "c_utils:utils",
    "hitrace:hitrace_meter",
    "hitrace:libhitracechain",
    "rust_cxx:cxx_cppdeps",
  ]

  subsystem_name = "distributeddatamgr"
  part_name = "data_share"
}

ohos_rust_static_library("ffi_hitrace") {
  crate_name = "ffi_hitrace"
  sources = [ "src/lib.rs" ]

  deps = [ ":ffi_hitrace_cxx" ]

  external_deps = [ "rust_cxx:lib" ]

  subsystem_name = "distributeddatamgr"
  part_name = "data_share"
}

if (use_clang_coverage) {
  group("ffi_hitrace_test") {
  }
} else {
  ohos_rust_unittest("ffi_hitrace_test") {
    module_out_path = "data_share/ffi/ffi_hitrace"
    sources = [ "src/lib.rs" ]

    deps = [ ":ffi_hitrace_cxx" ]

    external_deps = [ "rust_cxx:lib" ]

    subsystem_name = "distributeddatamgr"
    part_name = "data_share"
  }
}
